# FA_cafe_system

./: alembic.ini  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 2025_04_25_1149-1392c47815bf_create_category_table.py  2025_04_25_1443-a53cb978eb5c_create_dish_table.py
src/config/: base_config.py  db_config.py
src/menu/: __init__.py  models.py
src/models/: __init__.py  base.py  db_helper.py  mixin.py
